// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Banner BottomBanner 1`] = `
<div
  className="d-flex justify-content-center bg-dark queer-banner p-0"
>
  Queer Lives Matter
</div>
`;

exports[`Storyshots Banner TopBanner 1`] = `
<div
  className="d-flex justify-content-center bg-dark text-yellow p-0"
>
  Black Lives Matter
</div>
`;

exports[`Storyshots Error400 default 1`] = `
<div
  className="text-center container"
>
  <h2
    className="text-danger"
  >
    Something went wrong!
  </h2>
  <h3
    className="text-danger"
  >
     The file could not be loaded
  </h3>
  <h4>
    foo
  </h4>
  <a
    href="/data/test/fuidshfjk"
  >
     Try again 
  </a>
  <p>
    <a
      href="/"
      onClick={[Function]}
    >
      Go to Home
    </a>
  </p>
</div>
`;

exports[`Storyshots Error404 default 1`] = `
<div
  className="container"
>
  <p
    className="text-center"
  >
    <a
      href="/"
      onClick={[Function]}
    >
      Go to Home 
    </a>
  </p>
</div>
`;

exports[`Storyshots Filesystem FilesystemContextMenu 1`] = `
<div
  className="fileListItemDropdownButton dropdown"
  id="fileListItemDropdownButton-34"
>
  <button
    aria-expanded={false}
    aria-haspopup={true}
    className="no-after btn-sm dropdown-toggle btn btn-primary"
    disabled={false}
    id="fileListItemDropdownButton-34-button"
    onClick={[Function]}
    type="button"
  >
    ●●●
  </button>
</div>
`;

exports[`Storyshots Filesystem NewFolderModal 1`] = `
<form
  className=""
  onSubmit={[Function]}
>
  <div
    className="modal-header"
  >
    <div
      className="modal-title h4"
    >
      Create new Directory
    </div>
    <button
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
      <span
        className="sr-only"
      >
        Close
      </span>
    </button>
  </div>
  <div
    className="modal-body"
  >
    <div
      className="form-group"
    >
      <label
        className="form-label"
        htmlFor="formFolderName"
      >
        Folder name
      </label>
      <input
        className="form-control"
        id="formFolderName"
        onChange={[Function]}
        placeholder="e.g. My Cat Pictures"
        type="text"
        value=""
      />
    </div>
    
  </div>
  <div
    className="modal-footer"
  >
    <div
      className="w-100 justify-content-between row"
    >
      <button
        className="btn btn-secondary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Abort
      </button>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Create Folder
      </button>
    </div>
  </div>
</form>
`;

exports[`Storyshots Filesystem SearchModal 1`] = `
Array [
  <div
    className="modal-header"
  >
    <div
      className="w-100 text-center"
    >
      <div
        className="modal-title h4"
      >
        Search for files or folders
      </div>
      <div
        className="form-group"
      >
        <label
          className="form-label"
          htmlFor="searchValue"
        >
          Query
        </label>
        <input
          className="form-control"
          id="searchValue"
          onChange={[Function]}
          placeholder="e.g. Pictures"
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
      <span
        className="sr-only"
      >
        Close
      </span>
    </button>
  </div>,
  <div
    className="modal-body"
  >
    <div
      className="minh-35"
    >
      Enter something
    </div>
  </div>,
]
`;

exports[`Storyshots Filesystem UploadDecisionsModal 1`] = `
Array [
  <div
    className="modal-header"
  >
    <div
      className="modal-title h4"
    >
      Uploading
    </div>
    <button
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
      <span
        className="sr-only"
      >
        Close
      </span>
    </button>
  </div>,
  <div
    className="modal-body"
  >
    <div>
      Folders that would be merged:
      <div
        className="list-group list-group-flush"
        onKeyDown={[Function]}
      >
        <div
          className="bg-body border list-group-item"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          fasel
           
        </div>
        <div
          className="bg-body border list-group-item"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          fasel/blub
           
        </div>
      </div>
    </div>
    <div>
      Files that would be overwritten:
      <div
        className="list-group list-group-flush"
        onKeyDown={[Function]}
      >
        <div
          className="bg-body border list-group-item"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          bla.txt
           
        </div>
        <div
          className="bg-body border list-group-item"
          data-rb-event-key={null}
          disabled={false}
          onClick={[Function]}
        >
          fasel/bla.wow
           
        </div>
      </div>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Show all (
        3
        )
         
      </button>
    </div>
  </div>,
  <div
    className="modal-footer"
  >
    <div
      className="w-100 text-warning row"
    >
      Some files or folders need to be renamed, because their name is invalid or you have not the permission to overwrite them
       
    </div>
    <div
      className="w-100 justify-content-between row"
    >
      <button
        className="btn btn-secondary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <div>
        <button
          className="mx-2 btn btn-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Decide for each one
        </button>
        <button
          className="btn btn-primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Merge and overwrite
        </button>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots Filesystem default 1`] = `
<div
  className="d-flex flex-column align-content-between justify-content-between h-100"
>
  <div
    className="flex-grow-1 overflow-auto d-flex h-100 flex-column"
    id="fileView"
  >
    <div
      className="flex-grow-1 overflow-auto"
      id="fileList"
    >
      <div
        className="py-1 d-flex flex-column h-100 container-fluid"
      >
        <div
          className="flex-shrink-0"
        >
          <nav
            aria-label="breadcrumb"
          >
            <ol
              className="breadcrumb"
            >
              <a
                className="breadcrumb-item active"
                href="/file"
                onClick={[Function]}
              >
                Main
              </a>
            </ol>
          </nav>
          <div
            className="pb-1 d-flex justify-content-between align-items-center"
            id="fileToolbar"
          >
            <span />
            <span>
              <span
                className="fade"
              >
                <a
                  aria-disabled={true}
                  className="mx-1 btn btn-outline-secondary btn-sm disabled"
                  href="http://localhost/data/download?ids="
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex={-1}
                >
                  Download
                </a>
              </span>
              <button
                className="ml-1 btn btn-outline-secondary btn-sm"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Search
              </button>
            </span>
          </div>
          <div
            className="row"
          >
            <div
              className="col-md-1 col-2"
            >
              <div
                className="form-group"
              >
                <div
                  className="form-check"
                >
                  <input
                    checked={false}
                    className="form-check-input position-static"
                    disabled={false}
                    id="formBasicCheckbox"
                    onChange={[Function]}
                    type="checkbox"
                  />
                </div>
              </div>
            </div>
            <div
              className="text-center col-md-1 col-2"
              onClick={[Function]}
            >
              Type
            </div>
            <div
              className="col-md-1 col-2"
            >
              Interact
            </div>
            <div
              className="col-md-4 col-6"
              onClick={[Function]}
            >
              Name
            </div>
            <div
              className="col-md-3 col-6"
              onClick={[Function]}
            >
              Modified by
            </div>
            <div
              className="col-md-1 col-3"
              onClick={[Function]}
            >
              Last Modified
            </div>
            <div
              className="col-md-1 col-3"
              onClick={[Function]}
            >
              Size
            </div>
            <div
              className="border-top my-2 col-12"
            />
          </div>
        </div>
        <div
          className="overflow-auto flex-grow-1"
        >
          <div
            className="d-flex justify-content-center align-items-center h-100 container"
          >
            <div
              className="spinner-border"
              role="status"
            >
              <span
                className="sr-only"
              >
                Loading...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="flex-shrink-0"
      id="uploadInformation"
    />
  </div>
  <div
    className="flex-shrink-0"
    id="uploadZone"
  />
</div>
`;

exports[`Storyshots Footer default 1`] = `
<footer
  className="footer mt-autotext-white bg-primary"
>
  <div
    className="d-flex flex-column justify-content-center p-0 container"
  >
    <span
      className="align-self-center mt-2"
    >
      <a
        className="text-white"
        href="https://github.com/filefighter"
      >
        FileFighter 
        <img
          alt="github logo"
          height="16px"
          src="github.svg"
        />
      </a>
       
      is made with &lt;3 by
    </span>
    <div
      className="d-flex justify-content-around"
    >
      <span>
        <a
          className="text-white"
          href="https://github.com/Gimleux"
        >
          Gimleux
        </a>
      </span>
      <span>
        <a
          className="text-white"
          href="https://github.com/open-schnick"
        >
          Open-Schnick
        </a>
      </span>
      <span>
        <a
          className="text-white"
          href="https://github.com/qvalentin"
        >
          qvalentin
        </a>
      </span>
    </div>
  </div>
</footer>
`;

exports[`Storyshots Health default 1`] = `
<div
  className="container"
>
  <h1>
    FileFighter
  </h1>
  <img
    alt="Logo FileFighter"
    onClick={[Function]}
    src="logo.png"
  />
  <div
    className="d-flex justify-content-center align-items-center h-100 container"
  >
    <div
      className="spinner-border"
      role="status"
    >
      <span
        className="sr-only"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Login default 1`] = `
<div>
  <div
    className="mt-4 justify-content-center row"
  >
    <div
      className="login-input col"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <input
            autoComplete="username"
            autoFocus={true}
            className="form-control"
            id="formBasicUsername"
            onChange={[Function]}
            placeholder="Username"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <input
            autoComplete="current-password"
            className="form-control"
            id="formBasicPassword"
            onChange={[Function]}
            placeholder="Password"
            type="password"
            value=""
          />
          <small
            className="text-muted form-text"
          >
            Contact your administrator if you have forgotten your login details.
          </small>
        </div>
        <button
          className="btn btn-primary btn-block"
          disabled={false}
          type="submit"
        >
          <span
            aria-hidden="true"
            className="d-none spinner-grow spinner-grow-sm"
            role="status"
          />
           
          <span
            className="d-none"
          >
            isLoading...
          </span>
          Sign in
        </button>
        <div
          className="mt-3 justify-content-center form-group"
        >
          <div
            className="form-check"
          >
            <input
              checked={true}
              className="form-check-input"
              disabled={false}
              id="formBasicCheckbox"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label"
              htmlFor="formBasicCheckbox"
              title=""
            >
              Keep me signed in*
            </label>
          </div>
          <small
            className="text-muted form-text"
          >
            *By clicking this, you accept the usage of cookies.
          </small>
        </div>
        <p
          className="text-danger"
        >
          
        </p>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Login interactionArea 1`] = `
<div>
  <div
    className="mt-4 justify-content-center row"
  >
    <div
      className="login-input col"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <input
            autoComplete="username"
            autoFocus={true}
            className="form-control"
            id="formBasicUsername"
            onChange={[Function]}
            placeholder="Username"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <input
            autoComplete="current-password"
            className="form-control"
            id="formBasicPassword"
            onChange={[Function]}
            placeholder="Password"
            type="password"
            value=""
          />
          <small
            className="text-muted form-text"
          >
            Contact your administrator if you have forgotten your login details.
          </small>
        </div>
        <button
          className="btn btn-primary btn-block"
          disabled={false}
          type="submit"
        >
          <span
            aria-hidden="true"
            className="d-none spinner-grow spinner-grow-sm"
            role="status"
          />
           
          <span
            className="d-none"
          >
            isLoading...
          </span>
          Sign in
        </button>
        <div
          className="mt-3 justify-content-center form-group"
        >
          <div
            className="form-check"
          >
            <input
              checked={false}
              className="form-check-input"
              disabled={false}
              id="formBasicCheckbox"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label"
              htmlFor="formBasicCheckbox"
              title=""
            >
              Keep me signed in*
            </label>
          </div>
          <small
            className="text-muted form-text"
          >
            *By clicking this, you accept the usage of cookies.
          </small>
        </div>
        <p
          className="text-danger"
        >
          
        </p>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Login onlyHeader 1`] = `
<div
  className="login-intro"
>
  <div
    className="justify-content-center row"
  >
    <img
      className="rounded"
      height="200px"
      src="logoWithWhiteBorder.png"
      width="auto"
    />
  </div>
  <div
    className="justify-content-center row"
  >
    <h1>
      Greetings Traveller!
    </h1>
  </div>
  <div
    className="justify-content-center row"
  >
    <h2>
      Be welcome at FileFighter
    </h2>
  </div>
</div>
`;

exports[`Storyshots Login onlyInput 1`] = `
<div>
  <div
    className="mt-4 justify-content-center row"
  >
    <div
      className="login-input col"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <input
            autoComplete="username"
            autoFocus={true}
            className="form-control"
            id="formBasicUsername"
            onChange={[Function]}
            placeholder="Username"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <input
            autoComplete="current-password"
            className="form-control"
            id="formBasicPassword"
            onChange={[Function]}
            placeholder="Password"
            type="password"
            value=""
          />
          <small
            className="text-muted form-text"
          >
            Contact your administrator if you have forgotten your login details.
          </small>
        </div>
        <button
          className="btn btn-primary btn-block"
          disabled={false}
          type="submit"
        >
          <span
            aria-hidden="true"
            className="d-none spinner-grow spinner-grow-sm"
            role="status"
          />
           
          <span
            className="d-none"
          >
            isLoading...
          </span>
          Sign in
        </button>
        <div
          className="mt-3 justify-content-center form-group"
        >
          <div
            className="form-check"
          >
            <input
              checked={false}
              className="form-check-input"
              disabled={false}
              id="formBasicCheckbox"
              onChange={[Function]}
              type="checkbox"
            />
            <label
              className="form-check-label"
              htmlFor="formBasicCheckbox"
              title=""
            >
              Keep me signed in*
            </label>
          </div>
          <small
            className="text-muted form-text"
          >
            *By clicking this, you accept the usage of cookies.
          </small>
        </div>
        <p
          className="text-danger"
        >
          
        </p>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Profile default 1`] = `
<div
  className="page-content container"
>
  <div
    className="px-1 w-100 mt-1 mb-3 "
  >
    <div
      className="w-100 title-action"
    >
      <h1
        className="mr-1 h4"
      >
        My Profile
      </h1>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <img
          alt="edit icon"
          className="pr-2"
          src="edit_white_24dp.svg"
        />
        Edit
      </button>
    </div>
  </div>
  <div
    className="profile-information-display p-0 w-100"
  >
    <h2
      className="h3 pb-3"
    />
    <dl>
      <dt>
        Username
      </dt>
      <dd />
      <dt>
        Groups
      </dt>
      <dd />
    </dl>
  </div>
</div>
`;

exports[`Storyshots Registration default 1`] = `
<div
  className="container"
  id="registrationContainer"
>
  <div
    className="row"
  >
    <div
      className="px-3 w-100"
    >
      <h1>
        Create new account
      </h1>
      <form
        className=""
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label
            className="form-label"
            htmlFor="formBasicUsername"
          >
            Username
          </label>
          <input
            className="form-control"
            id="formBasicUsername"
            onChange={[Function]}
            type="name"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <label
            className="form-label"
            htmlFor="formBasicPassword"
          >
            Password
          </label>
          <input
            className="form-control"
            id="formBasicPassword"
            onChange={[Function]}
            placeholder="Enter your super secret strong password password."
            type="password"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <label
            className="form-label"
            htmlFor="formConfirmPassword"
          >
            Re-enter password
          </label>
          <input
            className="form-control"
            id="formConfirmPassword"
            onChange={[Function]}
            type="password"
            value=""
          />
          <div>
            <img
              alt="status icon password length"
              src="info-24px.svg"
            />
            <span
              className="sr-only"
            >
              Missing: 
            </span>
            <span
              className="text-muted"
            >
              Passwords must be at least strong.
            </span>
          </div>
          <div>
            <img
              alt="status icon passwords match"
              src="info-24px.svg"
            />
            <span
              className="sr-only"
            >
              Done: 
            </span>
            <span
              className="text-muted"
            >
              Passwords must match.
            </span>
          </div>
        </div>
        <button
          className="btn btn-primary"
          disabled={false}
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </div>
  <img
    alt="logo"
    className="invisible m0 position-relative"
    id="logoSubmit"
    src="adventurer-run.gif"
  />
</div>
`;
